--- a/index.html
+++ b/index.html
@@ -352,43 +352,43 @@
         <div class="container">
           <h2 class="section-headings">Customers</h2>
           <ul class="customers-list list">
-            <li class="customers-cards">
-              <a href="" class="customers-icon">
+            <li class="customers-item">
+              <a href="" class="customers-link link">
                 <svg class="customers-list-icon" width="104" height="56">
                   <use href="./images/sprite_svg.svg#icon-company_1"></use>
                 </svg>
               </a>
             </li>
-            <li class="customers-cards">
-              <a href="" class="customers-icon">
+            <li class="customers-item">
+              <a href="" class="customers-link link">
                 <svg class="customers-list-icon" width="104" height="56">
                   <use href="./images/sprite_svg.svg#icon-company_2"></use>
                 </svg>
               </a>
             </li>
-            <li class="customers-cards">
-              <a href="" class="customers-icon">
+            <li class="customers-item">
+              <a href="" class="customers-link link">
                 <svg class="customers-list-icon" width="104" height="56">
                   <use href="./images/sprite_svg.svg#icon-company_3"></use>
                 </svg>
               </a>
             </li>
-            <li class="customers-cards">
-              <a href="" class="customers-icon">
+            <li class="customers-item">
+              <a href="" class="customers-link link">
                 <svg class="customers-list-icon" width="104" height="56">
                   <use href="./images/sprite_svg.svg#icon-company_4"></use>
                 </svg>
               </a>
             </li>
-            <li class="customers-cards">
-              <a href="" class="customers-icon">
+            <li class="customers-item">
+              <a href="" class="customers-link link">
                 <svg class="customers-list-icon" width="104" height="56">
                   <use href="./images/sprite_svg.svg#icon-company_5"></use>
                 </svg>
               </a>
             </li>
-            <li class="customers-cards">
-              <a href="" class="customers-icon">
+            <li class="customers-item">
+              <a href="" class="customers-link link">
                 <svg class="customers-list-icon" width="104" height="56">
                   <use href="./images/sprite_svg.svg#icon-company_6"></use>
                 </svg>
