--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
             <li><button class="btn-page" type="button">Marketing</button></li>
           </ul>
         </div>
-        <div class="container shadow-container">
+        <div class="container">
           <ul class="list content-list-1">
             <li class="border-color">
               <a class="link" href=""
@@ -80,7 +80,7 @@
                   height="300"
                   style="border: 1px black"
                 />
-                <div class="content-description">
+                <div class="content-description cards-box-shadow">
                   <h2 class="section-subheadings">
                     Banking App Interface Concept
                   </h2>
